[gd_scene load_steps=6 format=3 uid="uid://bgdnu7bmun3rf"]

[ext_resource type="Script" path="res://main/Cvs_layers/inventory.gd" id="1_3wdmt"]
[ext_resource type="Texture2D" uid="uid://dgyvamepnjqu0" path="res://assets/krita/papers/folder.png" id="2_jddme"]
[ext_resource type="PackedScene" uid="uid://b0tua8a6t5cag" path="res://main/temps/reports_preview.tscn" id="3_wv7qe"]
[ext_resource type="Texture2D" uid="uid://ct3w8e6myap5l" path="res://assets/blender/scenes/tuto/pictures/Back_view.png" id="4_x3ynu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yexv8"]

[node name="Inventory" type="CanvasLayer"]
follow_viewport_scale = 0.001
script = ExtResource("1_3wdmt")

[node name="Background" type="ColorRect" parent="."]
offset_left = 125.0
offset_top = 100.0
offset_right = 1797.0
offset_bottom = 983.0
color = Color(0.0627451, 0.0627451, 0.0627451, 0.435294)

[node name="folder" type="Sprite2D" parent="."]
position = Vector2(485, 544)
scale = Vector2(0.269758, 0.264538)
texture = ExtResource("2_jddme")

[node name="Reports_button" type="Button" parent="folder"]
offset_left = 991.0
offset_top = -1145.0
offset_right = 1591.0
offset_bottom = -996.0
rotation = 1.56783
theme_override_font_sizes/font_size = 76
theme_override_styles/normal = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yexv8")
text = "Reports"

[node name="Fax_button" type="Button" parent="folder"]
offset_left = 990.0
offset_top = -469.0
offset_right = 1601.0
offset_bottom = -316.0
rotation = 1.56783
theme_override_font_sizes/font_size = 76
theme_override_styles/normal = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yexv8")
text = "Faxes"

[node name="Reports_button3" type="Button" parent="folder"]
visible = false
offset_left = 997.19
offset_top = 226.811
offset_right = 1597.19
offset_bottom = 375.811
rotation = 1.56783
theme_override_font_sizes/font_size = 76
theme_override_styles/normal = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yexv8")
text = "Reports"

[node name="Them_button" type="Button" parent="folder"]
visible = false
offset_left = 987.0
offset_top = 892.0
offset_right = 1418.0
offset_bottom = 1030.0
rotation = 1.56783
theme_override_font_sizes/font_size = 76
theme_override_styles/normal = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yexv8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yexv8")
text = "Them"

[node name="reports" type="Control" parent="folder"]
layout_mode = 3
anchors_preset = 0
offset_left = -778.0
offset_top = -1285.0
offset_right = -285.0
offset_bottom = -593.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.39

[node name="0" parent="folder/reports" instance=ExtResource("3_wv7qe")]
position = Vector2(214.532, 313.495)
label_text = "January 4, 1990"
preview_photo = ExtResource("4_x3ynu")

[node name="1" parent="folder/reports" instance=ExtResource("3_wv7qe")]
position = Vector2(766.879, 691.512)
label_text = "January 16, 1990"
level = 1

[node name="fax" type="Control" parent="folder"]
layout_mode = 3
anchors_preset = 0
offset_left = -778.0
offset_top = -1285.0
offset_right = -285.0
offset_bottom = -593.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.39

[node name="them" type="Control" parent="folder"]
layout_mode = 3
anchors_preset = 0
offset_left = -778.0
offset_top = -1285.0
offset_right = -285.0
offset_bottom = -593.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.39

[node name="reports4" type="Control" parent="folder"]
layout_mode = 3
anchors_preset = 0
offset_left = -778.0
offset_top = -1285.0
offset_right = -285.0
offset_bottom = -593.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.39

[connection signal="pressed" from="folder/Reports_button" to="." method="_on_reports_button_pressed"]
[connection signal="pressed" from="folder/Fax_button" to="." method="_on_fax_button_pressed"]
[connection signal="pressed" from="folder/Them_button" to="." method="_on_them_button_pressed"]
